# eigen_catkin

./: CMakeLists.txt  README.md  StdVector.patch  apply_gtsam_patches.sh  disable_warnings.sh  package.xml  use-system-installation-of-eigen.cmake
cmake/: eigen-extras.cmake.in
eigen_catkin_info/: CMakeLists.txt  activate-me.bash  package.xml
eigen_catkin_info/src/: eigen_catkin_info.cpp
gtsam_patches/: ColPivHouseholderQR_MKL.patch  CommaInitializer.patch  ComplexSchur_MKL.patch  HouseholderQR.patch  HouseholderQR_MKL.patch  JacobiSVD_MKL.patch  LLT_MKL.patch  PartialPivLU_MKL.patch  RealSchur_MKL.patch  SelfAdjointEigenSolver_MKL.patch  patch_gtsam.patch
template/: footer  header
